CORS fix, optional data seeder
Co-authored-by: Copilot <copilot@github.com>